# rust-multiplatform

./: Cargo.toml
src/: lib.rs  macros.rs  tests.rs  utils.rs
src/traits/: mod.rs
